Adding basic REST API support using flask-RESTful and flask-marshmallow

--- a/instance/flask.cfg
+++ b/instance/flask.cfg
@@ -5,3 +5,7 @@ BASEDIR = os.path.abspath(os.path.dirname(__file__))
 SECRET_KEY = "dZx7I52DaRYUc8NDVTo44IzOyD9ezaql"
 DEBUG = True
 ENV = "development"
+
+## SQLAlchemy
+SQLALCHEMY_DATABASE_URI = "postgresql://postgres:password@localhost:5432/crow_dev"
+SQLALCHEMY_TRACK_MODIFICATIONS = False
